--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,7 @@
 <footer class="footer navbar-fixed-bottom">
 
-    <h1>Teste</h1>
+    <small>&copy;
+        2023 WallaceLanches. Todos os direitos reservados.
+    </small>
 
-</f git config --local user.email "dmrramaral@gmail.com"
+</footer>
