--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,1 +1,8 @@
-<p>public works!</p>
+<main>
+  <div id="chamada">
+    <p>Não perca tempo em filas! Faça seu pedido de sanduíche online agora</p>
+  </div>
+  <div id="combo" >
+    <img src="assets/img/combo.png" alt="Ilustração">
+  </div>
+</main>
