Inserção de rotas e alteração de páginas

--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<main id="login" class="d-flex">
+
+
+
+    <form>
+        <div id="camposLogin" class="">
+            <input type="email" class="form-control" placeholder="E-mail">
+        </div>
+        <div id="camposLogin" class="">
+            <input type="password" class="form-control" placeholder="Senha">
+        </div>
+
+
+
+        <div id="campoEntrar" class="container d-grid ">
+
+            <button type="submit" class="btn" name="entrar">
+                <img id="imgSanduiche" src="assets/img/hamburguer.png">
+                ENTRAR
+                <img id="imgBatata" src="assets/img/batatas-fritas.png">
+            </button>
+
+        </div>
+        <div id="esqueceuSenha" class="container d-flex justify-content-center">
+            <p><span routerLink="/recuperar-senha">Esqueceu a senha?</span></p>
+        </div>
+
+
+    </form>
+
+
+
+
+
+    <p id="linkcadastro"><span routerLink="/cadastro">Cadastre-se</span></p>
+
+</main>
