--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,8 +1,57 @@
 <main>
-  <div id="chamada">
-    <p>Não perca tempo em filas! Faça seu pedido de sanduíche online agora</p>
-  </div>
-  <div id="combo" >
-    <img src="assets/img/combo.png" alt="Ilustração">
-  </div>
+
+    <div id="carouselPromocoes" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <svg class="bd-placeholder-img bd-placeholder-img-sm d-block w-100 h-50"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
+          </div>
+          <div class="carousel-item active">
+            <svg class="bd-placeholder-img bd-placeholder-img-sm d-block w-100 h-50"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
+          </div>
+          <div class="carousel-item active">
+            <svg class="bd-placeholder-img bd-placeholder-img-sm d-block w-100 h-50"  xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <div id="cards" class="d-flex justify-content-center flex-wrap">
+        <div class="card mt-3" style="width: 18rem;">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sanduiche</text></svg>
+          <div class="card-body">
+            <h5 class="card-title">X-Tudo</h5>
+            <p class="card-text mb-0">Ingredientes:</p>
+            <p class="card-text">Pão, hamburguer, queijo minas, alface, tomate e bancon.</p>
+            <a href="#" class="btn btn-primary">Peça o seu agora</a>
+          </div>
+        </div>
+  
+        <div class="card mt-3" style="width: 18rem;">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Sanduiche" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sanduiche</text></svg>
+        <div class="card-body">
+          <h5 class="card-title">X-Salada Especial</h5>
+          <p class="card-text mb-0">Ingredientes:</p>
+          <p class="card-text">Pão, hamburguer, queijo minas, alface, tomate, salsicha, milho ervilha e bancon.</p>
+          <a href="#" class="btn btn-primary">Peça o seu agora</a>
+        </div>
+      </div>
+  
+        <div class="card mt-3" style="width: 18rem;">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Sanduiche" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sanduiche</text></svg>
+        <div class="card-body">
+          <h5 class="card-title">X-Bacon Salada</h5>
+          <p class="card-text mb-0">Ingredientes:</p>
+          <p class="card-text">Pão, hamburguer, queijo minas, alface, tomate e ovo.</p>
+          <a href="#" class="btn btn-primary">Peça o seu agora</a>
+        </div>
+        </div>
+    </div>
+    
 </main>
