--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -1,28 +1,16 @@
-main {
-    background-image: linear-gradient(to bottom, rgba(250, 0, 0, 0), rgba(255, 0, 0, 0.438));
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
 
+#carouselPromocoes{
+    margin: 20px 10px;
 }
 
-#combo {
-    position: absolute;
-    width: 316px;
-    height: 316px;
-   
-   
+
+
+#cards .card p{
+    font-size: 10px !important;
 }
-
-#chamada {
-
-position: absolute;
-
-font-style: normal;
-font-weight: 200;
-font-size: 24px;
-line-height: 41px;
-text-align: center;
-letter-spacing: -0.3px;
-    
+#cards .card h5{
+    font-size: 13px !important;
+}
+#cards card {
+    margin-top: 10px !important;
 }
