--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+.btn-primary {
+    --primary: #d80000 !important;
+    background: red !important;
+    border-color: red !important;
+    color: yellow !important;
+
+
+}
+
+
+body {
+    background: rgba(216, 0, 0, 0.911) !important;
+}
