--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="assets/img/logo.png" alt="" width="30" class="d-inline-block align-text-top">
@@ -13,13 +13,13 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Promoções</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#">Cardápio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active " > <span routerLink="/login">Faça seu Pedido</span></a>
+          <a class="nav-link" href="#">Promoções</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/login">Faça seu pedido</a>
         </li>
       </ul>
     </div>
