--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -69,7 +69,7 @@
                 {{ getIngredientesList(sanduiche | async) }}
               </p>
               <p class="card-text mb-0">Valor:</p>
-              <p class="card-text">{{sanduiches.valorSanduiche.toString() | currency: 'BRL' }}</p>
+              <p class="card-text">{{sanduiches.valorSanduiche.toString() }}</p>
               <a *ngIf="sanduiches.valorSanduiche > 0" href="#" class="btn btn-primary">Peça o seu agora</a>
               <p *ngIf="sanduiches.valorSanduiche <= 0" class="card-text">Valor indisponível no momento</p>
             </div>
