--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -1,7 +1,7 @@
 
 #carouselExampleIndicators{
     margin: 20px 10px;
-    height: 150px;
+
     
 }
 
@@ -15,4 +15,9 @@
 }
 #cards card {
     margin-top: 10px !important;
+}
+
+#carousel-inner img{
+    width: 100%;
+    height: 100%;
 }
