--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -9,33 +9,15 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"
                 class="active" aria-current="true"></button>
         </div>
-        <div class="carousel-inner" style="height:150px ;">
+        <div class="carousel-inner">
             <div class="carousel-item">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="150"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555"
-                        dy=".3em">First slide</text>
-                </svg>
+                <img width="100%" src="/assets/img/1banner.png" alt="">
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="150"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444"
-                        dy=".3em">Second slide</text>
-                </svg>
+                <img width="100%" src="/assets/img/2banner.png" alt="">
             </div>
             <div class="carousel-item active">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="150"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333"
-                        dy=".3em">Third slide</text>
-                </svg>
+                <img width="100%" src="/assets/img/3banner.png" alt="">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -64,7 +46,7 @@
             </svg>
             <div class="card-body">
               <h5 class="card-title">{{sanduiches.nome}}</h5>
-              <p class="card-text mb-0">Ingredientes:</p>
+              <p class="card-text mb-0"><b>Ingredientes:</b></p>
               <p class="card-text">
                 {{ getIngredientesList(sanduiche | async) }}
               </p>
