--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -11,13 +11,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item">
-                <img width="100%" src="/assets/img/1banner.png" alt="">
+                <img width="100%" src="/assets/img/1.png" alt="">
             </div>
             <div class="carousel-item">
-                <img width="100%" src="/assets/img/2banner.png" alt="">
+                <img width="100%" src="/assets/img/2.png" alt="">
             </div>
             <div class="carousel-item active">
-                <img width="100%" src="/assets/img/3banner.png" alt="">
+                <img width="100%" src="/assets/img/3.png" alt="">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
