Criação de component cardápio

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -144,7 +144,7 @@
                 <p class="card-text mt-0 mb-0"><b>Valor:</b></p>
                 <p class="card-text">{{sanduiches.valorSanduiche.toString() | currency: 'BRL' }}</p>
                 <a id="buttoncard" *ngIf="sanduiches.valorSanduiche > 0" routerLink="/login" href="#"
-                    class="btn btn-primary">Peça o seu
+                    class="btn btn-primary mb-1">Peça o seu
                     agora</a>
                 <p *ngIf="sanduiches.valorSanduiche <= 0" class="card-text">Valor indisponível no momento</p>
             </div>
@@ -165,23 +165,23 @@
                     conhecida pela qualidade excepcional dos nossos lanches e pela experiência gastronômica única que
                     oferecemos.
                 </p>
-                <p class="card-text"> Nossos sanduíches são preparados com ingredientes frescos e selecionados,
+                <p class="card-text d-none d-sm-none"> Nossos sanduíches são preparados com ingredientes frescos e selecionados,
                     garantindo sabores autênticos e texturas incríveis. Valorizamos a qualidade e o sabor, e é por isso
                     que trabalhamos com maionese caseira, feita com ingredientes frescos e naturais, que dá um toque
                     especial a cada mordida.
                 </p>
-                <p class="card-text"> No Wallace Lanches, você encontrará um cardápio diversificado, com opções para
+                <p class="card-text d-none d-sm-none"> No Wallace Lanches, você encontrará um cardápio diversificado, com opções para
                     todos os gostos. Temos sanduíches clássicos que conquistaram o coração dos nossos clientes, bem como
                     criações exclusivas que vão surpreender o seu paladar. E se você tiver alguma preferência especial
                     ou restrição alimentar, nossa equipe estará pronta para personalizar o seu pedido.
                 </p>
-                <p class="card-text"> Além da qualidade dos nossos lanches, também nos orgulhamos do nosso ambiente
+                <p class="card-text d-none d-sm-block"> Além da qualidade dos nossos lanches, também nos orgulhamos do nosso ambiente
                     acolhedor e amigável. Quer você esteja procurando um lugar para uma refeição rápida ou deseje
                     desfrutar de uma refeição descontraída com amigos e familiares, o Wallace Lanches é o lugar ideal.
                     Nossa equipe atenciosa está sempre pronta para garantir que você tenha uma experiência agradável e
                     memorável em nossa lanchonete.
                 </p>
-                <p class="card-text"> Se preferir desfrutar dos nossos lanches no conforto da sua casa, oferecemos
+                <p class="card-text d-none d-sm-none"> Se preferir desfrutar dos nossos lanches no conforto da sua casa, oferecemos
                     serviço de delivery rápido e eficiente. Basta fazer o seu pedido e em breve estaremos levando até
                     você a satisfação de um delicioso sanduíche do Wallace Lanches.
 
