--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cardápio</a>
+          <a class="nav-link active" routerLink="/cardapio">Cardápio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Promoções</a>
