--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+/*  */
 
 .btn-primary {
     --primary: #d80000 !important;
@@ -13,3 +15,5 @@
 body {
     background: rgba(216, 0, 0, 0.911) !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
