--- a/src/app/public/cardapio/cardapio.component.html
+++ b/src/app/public/cardapio/cardapio.component.html
@@ -1,17 +1,27 @@
 <main>
 
-    <div class="card-body">
-        <mat-tab-group>
-            <mat-tab id="opcao" label="Sanduiche"> 
-                <app-sanduiche></app-sanduiche>
-            </mat-tab>
-            <mat-tab id="opcao" label="Combo">Combo</mat-tab>
-            <mat-tab id="opcao" label="Bebidas">Bebidas</mat-tab>
-        </mat-tab-group>
-          
-
-
-    </div>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="sanduiche-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Sanduiche</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Combo</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Bebidas</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false" disabled>Disabled</button>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="sanduiche-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+            <app-sanduiche></app-sanduiche>
+        </div>
+        <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
+        <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
+        <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
+      </div>
 
 </main>
 <router-outlet></router-outlet>
