--- a/src/app/public/cardapio/cardapio.component.html
+++ b/src/app/public/cardapio/cardapio.component.html
@@ -41,7 +41,9 @@
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
+                <app-cardapio></app-cardapio>
+                </button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
