--- a/src/app/public/cardapio/cardapio.component.html
+++ b/src/app/public/cardapio/cardapio.component.html
@@ -41,9 +41,7 @@
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
-                <app-cardapio></app-cardapio>
-                </button>
+                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
@@ -57,13 +55,13 @@
         </ul>
         <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
-                tabindex="0">...</div>
+                tabindex="0"><app-sanduiche></app-sanduiche></div>
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"
-                tabindex="0">...</div>
+                tabindex="0"><app-sanduiche></app-sanduiche></div>
             <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab"
-                tabindex="0">...</div>
+                tabindex="0"><app-sanduiche></app-sanduiche></div>
             <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab"
-                tabindex="0">...</div>
+                tabindex="0"><app-sanduiche></app-sanduiche></div>
         </div>
     </div>
 </main>
