Ajuste rota cardapio

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -188,8 +188,8 @@
                 </p>
 
 
-                <a href="#" class="btn btn-primary m-1">Faça seu pedido</a>
-                <a routerLink="/login" class="btn btn-primary m-1">Cardápio</a>
+                <a routerLink="/login" href="#" class="btn btn-primary m-1">Faça seu pedido</a>
+                <a routerLink="/cardapio" class="btn btn-primary m-1">Cardápio</a>
             </div>
 
         </div>
