--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -13,15 +13,18 @@
 
 #cards .card p{
     font-size: 10px !important;
-    padding: 5px !important;
+    padding: 0px !important;
+    margin: 0px !important;
 }
 #cards .card h5{
     font-size: 13px !important;
-    padding: 5px !important;
+    padding: 0px !important;
+    margin: 0px !important;
 }
 #cards .card {
     margin-top: 2% !important;
-    padding: 5px !important;
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
 
