--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -1,12 +1,9 @@
 
 #carouselExampleIndicators{
-    margin: 20px 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
     
-
-    
+    justify-content: space-around !important;
+ 
 }
 
 
@@ -20,19 +17,6 @@
     font-size: 13px !important;
     padding: 0px !important;
     margin: 0px !important;
-}
-#cards .card {
-    margin-top: 2% !important;
-    padding: 0px !important;
-    margin: 0px !important;
-}
-
-
-
-
-
-.promocoes{
- 
 }
 
 /* Diminuir a fonte do id id="buttoncard" se a tela for de smartphone */
