--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -36,8 +36,8 @@
 
 
 
-    <div id="cards" class="d-flex justify-content-center flex-wrap">
-        <div id="promocoes" *ngFor="let sanduiches of sanduiche |async" class="card m-1 col-5 col-md-3 col-">
+    <div id="cards" class="d-flex flex-wrap justify-content-center ">
+        <div id="promocoes" *ngFor="let sanduiches of sanduiche |async" class="card m-1 col-5 col-sm-4 col-md-3 col-xl-2">
             <!--      <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
                 role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Placeholder</title>
