Inserindo tela de ADM

--- a/src/app/administrador/administrador.component.html
+++ b/src/app/administrador/administrador.component.html
@@ -1,1 +1,32 @@
-<p>administrador works!</p>
+<!-- Campo na tela pra direcionar ao html que será gerado uma lista de produtos para gerar o CRUD -->
+<div class="container">
+
+    <div class="row">
+
+        <div class="col-md-12">
+
+            <div class="card text-center">
+
+                <div class="card-header">
+
+                    <b> Produtos</b>
+
+                </div>
+
+                <div class="card-body">
+
+                    <p class="card-text">Aqui você pode cadastrar, editar e excluir os produtos do cardápio.</p>
+
+                    <a routerLink="produtos" class="btn btn-primary m-1">Produtos</a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+
+</div>    
+
