--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link active" routerLink="/cardapio">Cardápio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Promoções</a>
+          <a class="nav-link active" routerLink="/admin" href="#">Administrador</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" routerLink="/login">Faça seu pedido</a>
