--- a/src/app/administrador/administrador.component.html
+++ b/src/app/administrador/administrador.component.html
@@ -1,5 +1,5 @@
 <!-- Campo na tela pra direcionar ao html que será gerado uma lista de produtos para gerar o CRUD -->
-<div class="container">
+<div class="container mt-2">
 
     <div class="row">
 
@@ -9,7 +9,7 @@
 
                 <div class="card-header">
 
-                    <b> Produtos</b>
+                    <b> Funções</b>
 
                 </div>
 
@@ -18,6 +18,8 @@
                     <p class="card-text">Aqui você pode cadastrar, editar e excluir os produtos do cardápio.</p>
 
                     <a routerLink="produtos" class="btn btn-primary m-1">Produtos</a>
+                    <a routerLink="produtos" class="btn btn-primary m-1">Pedidos</a>
+                    <a routerLink="produtos" class="btn btn-primary m-1">Clientes</a>
 
                 </div>
 
